--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ li > label {
   width: 226px;
 }
 li >    input[type="text"] {
-  width: 226px
+  width: 226px;
 }
 li > button.delete:hover {
   color: #CF2323;
@@ -136,12 +136,12 @@ li > button.delete:hover {
 
 /* Edit Task */
 ul li input[type=text] {
-  display: none
+  display: none;
 }
 
 ul li.edit-mode input[type=text] {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 ul li.edit-mode label {
