--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 @media (max-width: 768px) {
 
-  .matrix { 
+  .matrix {
     text-align: center;
   }
 
@@ -37,10 +37,12 @@ ul {
   margin: 0;
   padding: 0px;
 }
-li, h3 {
+li,
+h3 {
   list-style: none;
 }
-input,button{
+input,
+button {
   outline: none;
 }
 button {
