--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 /* Basic Style */
+
 body {
   background-color: #f8f8f8;
   color: #333;
   font-family: Lato, sans-serif;
 }
+
 .matrix {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
+
 .matrix img {
   width: 100%;
 }
+
 .matrix__more-inf {
   font-family: fantasy, cursive;
 }
@@ -24,30 +28,36 @@ body {
   }
 
 }
+
 .task-bar {
   display: block;
   width: 425px;
   margin: 0 auto 0;
 }
+
 .task {
   width: 56%;
   display: inline-block;
 }
+
 ul {
   margin: 0;
-  padding: 0px;
+  padding: 0;
 }
+
 li,
 h3 {
   list-style: none;
 }
+
 input,
 button {
   outline: none;
 }
+
 button {
   background: none;
-  border: 0px;
+  border: 0;
   color: #888;
   font-size: 15px;
   width: 60px;
@@ -57,7 +67,9 @@ button {
 button:hover {
   color: #3a3a3a;
 }
+
 /* Heading */
+
 h3,
 label[for="add-tasks__input"] {
   color: #333;
@@ -68,6 +80,7 @@ label[for="add-tasks__input"] {
   margin: 0;
   text-transform: uppercase;
 }
+
 input[type="text"] {
   margin: 0;
   font-size: 18px;
@@ -80,28 +93,34 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
+
 input[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
+
 label[for="add-tasks__input"] {
   display: block;
   margin: 0 0 20px;
 }
+
 .add-tasks__input {
   width: 318px;
 }
+
 section > button:hover {
   color: #0fc57c;
 }
 
 /* Task list */
+
 li {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
 }
+
 li > * {
   vertical-align: middle;
 }
@@ -109,34 +128,41 @@ li > * {
 li > input[type="checkbox"] {
   margin: 0 10px;
 }
+
 li > label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
+
 li > input[type="text"] {
   width: 226px;
 }
+
 li > button.delete:hover {
   color: #cf2323;
 }
+
 .delete img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
+
 .delete img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
+
 .completed-tasks label {
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
+
 ul li input[type=text] {
   display: none;
 }
